# BAML

./: Cargo.toml  test.baml
baml_core/: Cargo.toml
baml_core/src/: lib.rs  parser.rs  parser_util.rs  template.rs
baml_html/: Cargo.toml
baml_html/src/: backend_html.rs  main.rs
src/: backend_html.rs  lib.rs  main.rs  parser.rs  parser_util.rs  template.rs
