[package]
name = "baml_core"
version = "0.1.0"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

[dependencies]

[dependencies.tlib]
git = "https://github.com/T0mstone/tlib"
rev = "048f9005b8512f79a615b2bfdce98ed8993dc7d5"
#path = "../../tlib" # for development purposes (on my machine)
features = ["use_std"]